--- a/package.json
+++ b/package.json
@@ -68,8 +68,9 @@
           { "p": "Together with [@GhitaB](https://github.com/GhitaB) we created this game." }
       ],
       "thanks": [
-          "Most of the images are downloaded from Pixabay.com.",
-          "[Book animation](http://www.animatedimages.org/data/media/53/animated-book-image-0032.gif)"
+          "Most of the images are downloaded from Pixabay.com and Wikipedia.",
+          "[Book animation](http://www.animatedimages.org/data/media/53/animated-book-image-0032.gif)",
+          "[Nice Job Animation](http://clipart-library.com/img1/892743.gif)"
       ]
   }
 }
