--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
       "thanks": [
           "Most of the images are downloaded from Pixabay.com and Wikipedia.",
           "[Book animation](http://www.animatedimages.org/data/media/53/animated-book-image-0032.gif)",
-          "[Nice Job Animation](http://clipart-library.com/img1/892743.gif)"
+          "[Nice Job Animation](http://clipart-library.com/img1/892743.gif)",
+          "[Funny mouse sparkler](https://github.com/robinwhittleton/jquery.sparkle), by [**@robinwhittletoni**](https://github.com/robinwhittleton)"
       ]
   }
 }
