Update npm package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memories",
+  "name": "memories-game-html",
   "version": "1.0.0",
   "description": "A blocks game, in the old fashion way.",
   "main": "bloggify.json",
