:arrow_up: 1.0.0 :tada:

--- a/package.json
+++ b/package.json
@@ -33,9 +33,23 @@
   },
   "homepage": "https://github.com/IonicaBizau/memories#readme",
   "blah": {
-    "title": "Memory Blocks",
-    "h_img": "http://i.imgur.com/m6ToUa4.png",
-    "h_url": "https://ionicabizau.github.io/memories/"
+    "show_installation": false,
+    "ex_img": "https://i.imgur.com/YoyavgM.png",
+    "ex_url": "https://ionicabizau.github.io/memories/",
+    "description": [
+      {
+        "h4": "👉 [PLAY NOW](https://ionicabizau.github.io/memories/)"
+      },
+      {
+        "p": "Together with [@GhitaB](https://github.com/GhitaB) we created this game."
+      }
+    ],
+    "thanks": [
+      "Most of the images are downloaded from Pixabay.com and Wikipedia.",
+      "[Book animation](http://www.animatedimages.org/data/media/53/animated-book-image-0032.gif)",
+      "[Nice Job Animation](http://clipart-library.com/img1/892743.gif)",
+      "[Funny mouse sparkler](https://github.com/robinwhittleton/jquery.sparkle), by [**@robinwhittletoni**](https://github.com/robinwhittleton)"
+    ]
   },
   "files": [
     "bin/",
@@ -60,20 +74,5 @@
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "bloggify-cli": "0.0.0-alpha26"
-  },
-  "blah": {
-      "show_installation": false,
-      "ex_img": "https://i.imgur.com/YoyavgM.png",
-      "ex_url": "https://ionicabizau.github.io/memories/",
-      "description": [
-          { "h4": "👉 [PLAY NOW](https://ionicabizau.github.io/memories/)" },
-          { "p": "Together with [@GhitaB](https://github.com/GhitaB) we created this game." }
-      ],
-      "thanks": [
-          "Most of the images are downloaded from Pixabay.com and Wikipedia.",
-          "[Book animation](http://www.animatedimages.org/data/media/53/animated-book-image-0032.gif)",
-          "[Nice Job Animation](http://clipart-library.com/img1/892743.gif)",
-          "[Funny mouse sparkler](https://github.com/robinwhittleton/jquery.sparkle), by [**@robinwhittletoni**](https://github.com/robinwhittleton)"
-      ]
   }
 }
